2001-09-25  Geoff Berry  <geoff.berry@bops.com>

	* listing.c (buffer_line): Don't write past the end of `line' when
	EOF is reached.

2001-09-25  Alexandre Oliva  <aoliva@redhat.com>

	* config/tc-mn10300.c (tc_gen_reloc): Don't emit an *ABS*
	relocation for differences between symbols in a section other
	than the one in which the difference is to be placed; apply
	the relocation instead.

2001-09-24  Nick Clifton  <nickc@cambridge.redhat.com>

	* config/tc-arc.c: Add missing prototype.
	(md_atof): Change type to int. Add missing prototype.
	* config/tc-arc.h: Prototype exported functions.

2001-09-22  Nick Clifton  <nickc@cambridge.redhat.com>

	* as.c: Add missing function prototype.
	* config/obj-aout.c: Fix compile time warning.

2001-09-21  Bruno Haible  <haible@clisp.cons.org>

	* config/tc-openrisc.c: Don't include <ctype.h>.

2001-09-19  Martin Schwidefsky <schwidefsky@de.ibm.com>

	* gas/config/tc-s390.c: Add option -mwarn-areg-zero.

2001-09-19  Alan Modra  <amodra@bigpond.net.au>

	* config/tc-i370.c: Fix typo in last change.

2001-09-19  Nick Clifton  <nickc@cambridge.redhat.com>

	* doc/as.texinfo (Symbol Names): Improve documentation on local
	labels and add documenation about dollar labels.

2001-09-18  Bruno Haible  <haible@clisp.cons.org>

	* as.h: Don't include <ctype.h>.
	* as.c (main): For gettext, also set the LC_CTYPE locate facet.
	* atof-generic.c: Include "safe-ctype.h" instead of <ctype.h>.
	(atof_generic): Use ISDIGIT instead of isdigit.
	* config/m68k-parse.y: Include "safe-ctype.h".
	(yylex): Use ISDIGIT/ISALNUM instead of isdigit/isalnum.
	* config/obj-elf.c: Include "safe-ctype.h".
	(obj_elf_vtable_inherit): Use ISSPACE instead of isspace.
	* config/obj-vms.c: Include "safe-ctype.h".
	(Write_VMS_MHD_Records): Use TOUPPER instead of islower/toupper.
	(VMS_Case_Hack_Symbol): Use ISUPPER/ISLOWER/TOUPPER/TOLOWER
	instead of isupper/islower/toupper/tolower.
	* config/tc-a29k.c: Include "safe-ctype.h" instead of <ctype.h>.