@@ -157,19 +157,29 @@ input_file_open (filename, pre)
       /* Begins with comment, may not want to preprocess.  */
       c = getc (f_in);
       if (c == 'N')
-	{
-	  fgets (buf, 80, f_in);
-	  if (!strcmp (buf, "O_APP\n"))
-	    preprocess = 0;
-	  if (!strchr (buf, '\n'))
-	    ungetc ('#', f_in);	/* It was longer.  */
-	  else
-	    ungetc ('\n', f_in);
-	}
+        {
+          fgets (buf, 80, f_in);
+          if (!strncmp (buf, "O_APP", 5) && isspace (buf[5]))
+            preprocess = 0;
+          if (!strchr (buf, '\n'))
+            ungetc ('#', f_in);	/* It was longer.  */
+          else
+            ungetc ('\n', f_in);
+        }
+      else if (c == 'A')
+        {
+          fgets (buf, 80, f_in);
+          if (!strncmp (buf, "PP", 2) && isspace (buf[2]))
+            preprocess = 1;
+          if (!strchr (buf, '\n'))
+            ungetc ('#', f_in);
+          else
+            ungetc ('\n', f_in);
+        }
       else if (c == '\n')
-	ungetc ('\n', f_in);
+        ungetc ('\n', f_in);
       else
-	ungetc ('#', f_in);
+        ungetc ('#', f_in);
     }
   else
     ungetc (c, f_in);
